--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+#quickNav {
+  height: 50px;
+  width: 60px;
+  border-radius: 0 50% 50% 0;
+  position: absolute;
+  display: none;
+  top: 20px;
+  left: 0px;
+  background-color: hsla(0, 28%, 43%, 0.662);
+  align-content: center;
+  padding: 0.5px;
+  color: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#quickNav:hover {
+  cursor: pointer;
 }
